fix registretion style and arrowAttention style on mobile

--- a/src/components/Goal/Goal.module.css
+++ b/src/components/Goal/Goal.module.css
@@ -50,11 +50,9 @@
   padding: 0px 15px;
   margin: 0 20px;
   border: none;
-  background: linear-gradient(
-    rgb(236, 177, 70) 0%,
-    rgb(241, 195, 65) 55%,
-    rgb(245, 213, 59) 100%
-  );
+  background: linear-gradient(rgb(236, 177, 70) 0%,
+      rgb(241, 195, 65) 55%,
+      rgb(245, 213, 59) 100%);
   box-shadow: 0px 8px 29px 0px rgba(178, 138, 61, 0.31);
   transform: scale(1.05);
   transition: all 0.5s ease-out;
@@ -122,8 +120,8 @@
   }
 
   .attention {
-    top: 0;
-    right: -40px;
+    top: 40px;
+    right: 75px;
   }
 
   .attentionLabel {
@@ -134,6 +132,6 @@
   .attentionArrow {
     width: 45px;
     height: 25px;
-    margin-bottom: 10px;
+    transform: rotate(90deg);
   }
 }
